# RL-gym

./: .gitignore  pyproject.toml
email-agent/: agent.py  benchmark.py  email_db.py  experiments.ipynb  project_types.py  synthetic_data.py  test.py  tools.py  train_and_test_inbox.py  utils.py  vf_env.py
email-agent/output/: qa_test.jsonl  qa_train.jsonl
hk-agent/: data-generation.ipynb
hk-agent/hk-dessert-data/: main_page.md  page_10.md  page_11.md  page_12.md  page_13.md  page_14.md  page_15.md  page_2.md  page_3.md  page_4.md  page_5.md  page_6.md  page_7.md  page_8.md  page_9.md
lex-sort/: data_generation.py  eval.py  grpo_train.py  notes.md
